--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
     class="row align-items-center justify-content-center"
     style="min-height: 100vh">
     <div class="col-md-4 bg-white p-4 rounded shadow">
-      <h1>Login to expenses.com</h1>
+      <h1>Login to sampleproject</h1>
       <p class="text-end text-danger" *ngIf="invalidMessage">Invalid Username or Password</p>
       <div class="form-group col-md-12 mb-3">    
         <label>Username</label>    
