--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="bg-custom"  *ngIf="router.url !== '/' && router.url !== '/login'">
 <div class="text-center fixed-bottom w-100 py-1 bg-custom">
-<p class="mb-0 text text-white p-0">2023 Copyrights expenses.com 2022</p>
+<p class="mb-0 text text-white p-0">2023 Copyrights sampleproject 2022</p>
 </div>
 </footer>
