--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex justify-content-between container-fluid p-2 bg-custom" *ngIf="router.url !== '/' && router.url !== '/login'">
   <div class="d-flex justify-content-start p-2 ">
-    <span><a class="logotext" href="">Expenses.com</a></span>
+    <span><a class="logotext" href="">sampleproject</a></span>
     <ul class="mb-0 d-flex ps-2">
       <li *ngFor="let tab of menuData" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" class="ms-4">
         <a [routerLink]="tab.routerLink" class="text-white">{{tab.menuTitle}}</a>
